# httpr

./: .gitignore  Cargo.toml  README.md
bench/: README.md  benchmark.yml
src/: args.rs  context.rs  error.rs  http_request.rs  http_response.rs  lib.rs  macros.rs  main.rs  request.rs  response.rs  router.rs  server.rs  tokens.rs
src/request/: mod.rs
src/response/: mod.rs
src/routes/: echo.rs  files.rs  mod.rs  not_found.rs  root.rs  user_agent.rs
tests/: echo.rs  root.rs  user_agent.rs
tests/integration/: echo.rs
tests/support/: setup.rs
