[package]
name = "rhhtp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
httparse = "1.8.0"
httpstatus = "0.1.2"
socket2 = "0.5.7"
thiserror = "1.0.59"
tokio = { version = "1.23.0", features = ["full"] }

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
