[package]
name = "rhhtp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1.6"
httpstatus = "0.1"
socket2 = "0.5"
thiserror = "1"
tokio = { version = "1.23", features = ["rt-multi-thread", "net", "io-util"] }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dev-dependencies]
rstest = "0.19"
