[package]
name = "rhhtp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1.6"
httpstatus = "0.1"
thiserror = "1"
tokio = { version = "1.23", features = ["rt-multi-thread", "net", "io-util"] }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dev-dependencies]
reqwest = "0.12.4"
rstest = "0.19"
tokio = { version = "1.23", features = ["test-util", "full"] }
